# AndroidNdk

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ss007/myfirstndkapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: my-lib.cpp  native-lib.cpp
app/src/main/cpp/include/: my-lib.h
app/src/main/java/com/ss007/myfirstndkapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ss007/myfirstndkapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
